--- a/components/i0ij51y52-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/i0ij51y52-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: i0ij51y52-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-931296cad4.jlms.p3.openshiftapps.com/rhtap/rhtap-qe:6b00fe43cb442cff8fb500caff8b3e3c86316ac5@sha256:3b65d5bc457f21ff41ba4677c5e2c820399bc51ac46402acbdf6842ec3413eda
+          name: container-image
